--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,13 +8,13 @@
     <link href="/style.css" rel="stylesheet" type="text/css"/>
     <title>Register</title>
     <script src='https://www.google.com/recaptcha/api.js?hl=en'></script>
-
 </head>
+
 <body>
 <!-- Navbar -->
 <nav th:replace="fragments/navbar :: navbar" >Navbar</nav>
 
-<!-- Formularz rejestracji -->
+<!-- Registration form -->
 <div class="container">
 
     <div class="col-md-6 col-md-offset-3">
@@ -69,7 +69,6 @@
         </div>
     </div>
 </div>
-
 
 <script type="text/javascript" th:src="@{/webjars/jquery/2.2.4/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.6/js/bootstrap.min.js}"></script>
