--- a/src/main/resources/templates/addNews.html
+++ b/src/main/resources/templates/addNews.html
@@ -8,11 +8,12 @@
     <link href="/style.css" rel="stylesheet" type="text/css"/>
     <title>AllNews</title>
 </head>
+
 <body>
 <!-- Navbar -->
 <nav th:replace="fragments/navbar :: navbar">Navbar</nav>
 
-<!-- Dodawanie newsa -->
+<!-- Add news -->
 <div class="jumbotron">
     <div class="container">
         <br/>
