--- a/src/main/resources/templates/allNews.html
+++ b/src/main/resources/templates/allNews.html
@@ -8,6 +8,7 @@
     <link href="/style.css" rel="stylesheet" type="text/css"/>
     <title>AllNews</title>
 </head>
+
 <body>
 <!-- Navbar -->
 <nav th:replace="fragments/navbar :: navbar">Navbar</nav>
@@ -25,7 +26,7 @@
         <!-- Blog Entries Column -->
         <div class="col-md-8">
 
-            <!-- -->
+            <!-- Errors -->
             <div class="alert alert-info" role="alert" th:if="${#lists.isEmpty(newsList)}">
                 No news to show.
             </div>
@@ -46,7 +47,6 @@
             <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
             <hr/>
             </div>
-
 
             <!-- Pagination -->
             <div th:replace="fragments/pagination :: paginationbar">Pagination</div>
@@ -69,52 +69,12 @@
                         </span>
                 </div>
                 </form>
-                <!-- /.input-group -->
-            </div>
-
-            <!-- Blog Categories Well -->
-            <div class="well">
-                <h4>Blog Categories</h4>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <ul class="list-unstyled">
-                            <li><a href="#">Category Name</a>
-                            </li>
-                            <li><a href="#">Category Name</a>
-                            </li>
-                            <li><a href="#">Category Name</a>
-                            </li>
-                            <li><a href="#">Category Name</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- /.col-lg-6 -->
-                    <div class="col-lg-6">
-                        <ul class="list-unstyled">
-                            <li><a href="#">Category Name</a>
-                            </li>
-                            <li><a href="#">Category Name</a>
-                            </li>
-                            <li><a href="#">Category Name</a>
-                            </li>
-                            <li><a href="#">Category Name</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- /.col-lg-6 -->
-                </div>
-                <!-- /.row -->
             </div>
 
         </div>
-
     </div>
-    <!-- /.row -->
-
     <hr/>
-
 </div>
-<!-- /.container -->
 
 <script type="text/javascript" th:src="@{/webjars/jquery/2.2.4/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.6/js/bootstrap.min.js}"></script>
