--- a/src/main/resources/templates/allUsers.html
+++ b/src/main/resources/templates/allUsers.html
@@ -8,6 +8,7 @@
     <link href="/style.css" rel="stylesheet" type="text/css"/>
     <title>AllUsers</title>
 </head>
+
 <body>
 <!-- Navbar -->
 <nav th:replace="fragments/navbar :: navbar" >Navbar</nav>
@@ -74,6 +75,7 @@
         </table>
     </div>
 
+    <!-- Pagination bar -->
     <div th:replace="fragments/pagination :: paginationbar">Pagination</div>
 
     <!-- Add user -->
@@ -150,7 +152,6 @@
         </div>
         <br/>
     </div>
-
 </div>
 
 <script type="text/javascript" th:src="@{/webjars/jquery/2.2.4/jquery.min.js}"></script>
